# cpp-tasks

combinations-notforu777/: .gitmodules
combinations-notforu777/include/: Combinations.h
combinations-notforu777/src/: Combinations.cpp  main.cpp
combinations-notforu777/test/: CMakeLists.txt  Strict.cmake
combinations-notforu777/test/src/: load_test.cpp  test.cpp
randomized-queue-notforu777/include/: randomized_queue.h
randomized-queue-notforu777/src/: subset.cpp
wordnet-notforu777/: wordnet_0001-don-t-perform-clang-format-checks-on-wordnet-tests.txt  wordnet_0002-fix-tests-run.txt  wordnet_tests_0001-fix-ICA-failures.txt
wordnet-notforu777/include/: wordnet.h
wordnet-notforu777/src/: main.cpp
